[Wayland] Right-click context-menus can only become shorter
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
People
(Reporter: q23456yuiop, Assigned: emilio)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
3.83 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:100.0) Gecko/20100101 Firefox/100.0
Steps to reproduce:
- Install enough extensions to have a long enough right click context menu.
- Open https://archlinux.org/
- Right click on a link in the middle of the screen.
- Right click on a link at the top the screen.
Actual results:
The second context menu has the same height as the first context menu, despite having much more space below.
Expected results:
The second context menu should use be higher and use more of the space below.
Environment: GNOME wayland 41.5 on Arch Linux
Assignee | ||
Comment 1•3 years ago
|
||
I can't repro this, does it work on Nightly?
"Long enough" as in, it doesn't fit on the screen at in any dimension (i.e., more than half the screen height?)
Assignee | ||
Updated•3 years ago
|
Reporter | ||
Comment 2•3 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)
I can't repro this, does it work on Nightly?
Still reproducible on 101.0a1 (2022-04-11) with GNOME wayland 42 on Arch Linux.
"Long enough" as in, it doesn't fit on the screen at in any dimension (i.e., more than half the screen height?)
Yes.
Reporter | ||
Comment 3•3 years ago
|
||
For more context, in my case the menu is higher than half of the screen height but shorter than the whole screen height. After right-clicking on a link in the middle of the screen, it is then impossible to right-click a link and get the menu to be higher than that without restarting the browser.
Assignee | ||
Comment 4•3 years ago
|
||
Let me try to reproduce this a bit harder then, thanks for clarifying :)
Assignee | ||
Comment 5•3 years ago
|
||
Otherwise showing the same popup again could incorrectly constrain the
position of the popup.
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 6•3 years ago
|
||
(for posterity)
Comment 8•3 years ago
|
||
bugherder |
Comment 9•3 years ago
•
|
||
Comment was meant for 1765714, will verify this issue asap.
Updated•3 years ago
|
Comment 10•3 years ago
|
||
I could not reproduce the issue on Ubuntu 20.4 (Wayland) using build 100.0a1(20220329204247).
Are there any more steps that I can use?
Can you please mention if the issue is still reproducing on latest Beta (https://archive.mozilla.org/pub/firefox/candidates/101.0b8-candidates/)?
Reporter | ||
Comment 11•3 years ago
|
||
I can confirm this issue is no longer reproducing on 101.b8. I'm not sure what more steps I can provide, though.
Assignee | ||
Comment 12•3 years ago
|
||
(In reply to Monica Chiorean from comment #10)
I could not reproduce the issue on Ubuntu 20.4 (Wayland) using build 100.0a1(20220329204247).
Are there any more steps that I can use?
You need to install enough add-ons so that the context menu is huge, or use a tiny screen or something. Anyways based on comment 11 marking as verified.
Description
•