Bug 1761929 - Clear move-to-rect size on popup close. r=stransky

Otherwise showing the same popup again could incorrectly constrain the
position of the popup.

Differential Revision: https://phabricator.services.mozilla.com/D143906